--- a/src/css/base.css
+++ b/src/css/base.css
@@ -19,9 +19,19 @@ article, footer, header, menu, nav, section, audio, video {
     max-width: 1200px;
     margin:0 auto;
 }
+@font-face
+{
+font-family: myFont;
+src: url('../font/fontello.ttf'),
+     url('../font/fontello.eot'); /* IE9 */
+}
+.myFont{
+    font-family: myFont;
+}
 body {
+    font-family: Tahoma,Helvetica,Arial,sans-serif;
     line-height:1;
-    min-width:1200px;
+    min-width:368px;
 	_text-align:left; /* IE5.5 */
     font-family: 'Microsoft Yahei';
 }
