--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,11 +7,15 @@
 .recommend_m_list .m_list_item{
     width: 30%;
     position: relative;
+    overflow: hidden;
+    cursor: pointer;
 }
 .recommend_m_list .m_list_item img{
     width: 100%;
 }
-
+.recommend_m_list .m_list_item:hover .play{
+    display: block;
+}
 .item_info{
     position: absolute;
     bottom: 0;
@@ -37,7 +41,33 @@
 .item_info .play{
     float: right;
     padding-right: 20px;
+    display: none;
 }
 .recommend_s_list {
+    display: flex;
+    width: 100%;
 
+}
+.recommend_s_list .left_list,
+.recommend_s_list .right_list{
+    width: 50%;
+}
+.recommend_s_list .s_list_item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin:0 15px 10px 15px;
+    height:30px;
+    cursor: pointer;
+
+}
+.recommend_s_list .s_list_item span{
+    margin-right: 15px;
+}
+.s_list_item:hover{
+    background:rgba(1,123,197,0.5);
+    color:#fff;
+}
+.song_icon span:hover{
+    color:#017BC5;
 }
