--- a/src/css/main.css
+++ b/src/css/main.css
@@ -56,7 +56,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin:0 15px 10px 15px;
+    padding: 0 15px 0 15px;
+    margin-bottom: 10px;
     height:30px;
     cursor: pointer;
 
