--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -17,9 +17,11 @@
     width: 300%;
     position: absolute;
     left:-100%;
-    transition: all 0.5s linear 0s;
+    transition: all 1s linear 0s;
 }
-
+.resetBannerBox{
+    transition: all 0s linear 0.1s;
+}
 .moveLeft{
     transition: all 0.5s liner 0.5s;
     transform: translateX(-33.3%);
