--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -12,21 +12,28 @@
 }
 .banner img{
     float: left;
+    width: 33.33%;
+}
+.banner .arrow{
+    display: flex;
+    color: #fff;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+}
+.banner .arrow span{
+    display: flex;
+    width: 30px;
+    height: 40px;
+    align-items: center;
+    background: rgba(0,0,0,0.5);
 }
 .banner_box{
     width: 300%;
     position: absolute;
     left:-100%;
-    transition: all 1s linear 0s;
+    transition: all 1s ease 0s;
 }
 .resetBannerBox{
-    transition: all 0s linear 0.1s;
-}
-.moveLeft{
-    transition: all 0.5s liner 0.5s;
-    transform: translateX(-33.3%);
-}
-.moveRight{
-    transition: all 0.5s liner 0.5s;
-    transform: translateX(33.3%);
+    transition: all 0s ease 0.1s;
 }
